chore: 更新Fabric Loader至0.19.3、迁移Log4j至SLF4J、完善元数据与清理依赖